byte-code-compiler/test_files/typing/bad/testfile-scope-2.psc

int_32 main() { int_32 x; if(x) { int_32 y; } else y; }

